Error Display Updates

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -2212,3 +2212,10 @@ input::-webkit-contacts-auto-fill-button {
         font-size:18px;
     }
 }
+.error-message {
+    color: red;
+    display: block;
+}
+.error-message::first-letter {
+    text-transform: uppercase;
+}
