--- a/frontend/styles/pages/receipt.scss
+++ b/frontend/styles/pages/receipt.scss
@@ -1,5 +1,5 @@
 .pg-receipt {
-  background-image:url(../images/bg-receipt.jpg);
+  background-image:url(../../images/bg-receipt.jpg);
   background-repeat:no-repeat;
   background-size:cover;
   padding-bottom:50px;
