Update SASS Structure Format

--- a/frontend/styles/pages/index.scss
+++ b/frontend/styles/pages/index.scss
@@ -1,6 +1,6 @@
 .pg-index {
   background-color:#000;
-  background-image:url(../../images/bg-index.jpg);
+  background-image:url(../images/bg-index.jpg);
   background-repeat:no-repeat;
   background-position:top center;
   background-size:100% auto;
@@ -196,7 +196,7 @@
       top:0;
       bottom:0;
       width:165px;
-      background-image:url(../../images/icon-btn-call.png);
+      background-image:url(../images/icon-btn-call.png);
       background-position:center;
       background-repeat:no-repeat;
     }
