Upsell Page Style Updates

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -205,10 +205,6 @@ body > div {
     animation-delay:0.1s;
 }
 
-.message-hidden {
-    display: none;
-}
-
 html:hover [class^="ss-"] {
     -ms-zoom:1;
 }
@@ -2219,3 +2215,10 @@ input::-webkit-contacts-auto-fill-button {
 .error-message::first-letter {
     text-transform: uppercase;
 }
+#ccIdentity {
+    display: block;
+}
+.message-hidden {
+    display: none;
+}
+
