--- a/frontend/styles/modal.scss
+++ b/frontend/styles/modal.scss
@@ -1,147 +1,167 @@
+@import './variables';
+
+.modal {
+  -webkit-overflow-scrolling: auto; // sass-lint:disable-line no-vendor-prefixes, no-misspelled-properties
+}
+
 .custom-modal {
-  font-family:Open-sans, sans-serif;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
-  text-align:center;
+  -moz-osx-font-smoothing: grayscale; // sass-lint:disable-line no-vendor-prefixes
+  -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
+  font-family: Open-sans, sans-serif;
+  text-align: center;
 
   .close-modal {
-    background-color:#FFF;
-    position:absolute;
-    border-radius:100%;
-    top:-20px;
-    right:-20px;
-    width:40px;
-    height:40px;
-    box-shadow:0 2px 5px rgba(0,0,0,0.1), 0 2px 3px rgba(0,0,0,0.15);
-    opacity:1;
-    transition:all .15s ease;
-    line-height:0;
-    font-size:34px;
-    font-weight:300;
-    color:#888;
-    padding:5px;
+    background-color: $color-white;
+    border-radius: 100%;
+    box-shadow: 0 2px 5px $color-black-dot1, 0 2px 3px $color-black-dot15;
+    color: $color-dark;
+    font-size: 34px;
+    font-weight: 300;
+    height: 40px;
+    line-height: 0;
+    opacity: 1;
+    padding: 5px;
+    position: absolute;
+    right: -20px;
+    top: -20px;
+    transition: .15s ease;
+    width: 40px;
 
     &:hover {
-      opacity:1;
-      box-shadow:0 2px 15px rgba(0,0,0,0.1), 0 2px 10px rgba(0,0,0,0.15);
+      box-shadow: 0 2px 15px $color-black-dot1, 0 2px 10px $color-black-dot15;
+      opacity: 1;
+
+      svg {
+        fill: $color-red2;
+      }
     }
 
-    &:hover svg {
-      fill: #F44336;
-    }
-
-    &:focus,&:active {
-      outline:none;
+    &:focus,
+    &:active {
+      outline: none;
     }
 
     svg {
-      fill: #919191;
+      fill: $color-dark-gray;
     }
   }
 
   .btn-modal-confirm {
-    font-family:Lato, sans-serif;
-    background:#F44336;
-    box-shadow:inset 0 32px 59px -18px rgba(255,255,255,0.59), inset 1px 1px 4px rgba(255,255,255,0.54);
-    font-size:1.7em;
-    transition:all .15s ease;
-    border-color:#F44336;
-    padding:25px;
+    background: $color-red2;
+    border-color: $color-red2;
+    box-shadow: inset 0 32px 59px -18px $color-white-dot59, inset 1px 1px 4px $color-white-dot55;
+    font-family: Lato, sans-serif;
+    font-size: 1.7em;
+    padding: 25px;
+    transition: .15s ease;
 
-    &:hover,&:focus,&:active {
-      background:#E53935;
-      box-shadow:inset 0 32px 59px -18px rgba(255,255,255,0.59), inset 1px 1px 4px rgba(255,255,255,0.55);
-      outline:none;
-      border-color:#E53935;
+    &:hover,
+    &:focus,
+    &:active {
+      background: $color-red1;
+      border-color: $color-red1;
+      box-shadow: inset 0 32px 59px -18px $color-white-dot59, inset 1px 1px 4px $color-white-dot55;
+      outline: none;
     }
 
-    &:active:hover,&:active:focus {
-      color:#FFEBEE;
-      background-color:#E53935;
-      box-shadow:inset 0 20px 65px -23px rgba(0,0,0,0.64), inset 1px 1px 4px rgba(232,55,55,0.52);
-      outline:none;
-      border-color:#E53935;
+    &:active {
+      &:hover,
+      &:focus {
+        background-color: $color-red1;
+        border-color: $color-red1;
+        box-shadow: inset 0 20px 65px -23px $color-black-dot64, inset 1px 1px 4px $color-red-dot52;
+        color: $color-light;
+        outline: none;
+      }
     }
   }
 
   .modal-dialog {
-    display:inline-block;
-    text-align:left;
-    vertical-align:middle;
-    width:100%;
-    max-width:720px;
-    margin-top:35px;
-    margin-bottom:0;
+    display: inline-block;
+    margin-bottom: 0;
+    margin-top: 35px;
+    max-width: 720px;
+    text-align: left;
+    vertical-align: middle;
+    width: 100%;
   }
 
   .modal-content {
-    border:0;
-    border-radius:2px;
-    box-shadow:0 16px 28px 0 rgba(0,0,0,0.15), 0 25px 55px 0 rgba(0,0,0,0.1);
-  
+    border: 0;
+    border-radius: 2px;
+    box-shadow: 0 16px 28px 0 $color-black-dot15, 0 25px 55px 0 $color-black-dot1;
+
     .modal-header {
-      padding:30px 40px;
+      padding: 30px 40px;
     }
 
     .modal-body {
-      padding:25px 40px;
+      padding: 25px 40px;
     }
 
     .form-group {
-      margin-bottom:1.2em;
-    
+      margin-bottom: 1.2em;
+
       .form-control {
-        padding:.75rem 2rem .75rem 1rem;
+        padding: .75rem 2rem .75rem 1rem;
       }
 
       .fv-control-feedback {
-        right:30px;
-        font-size:14px;
-        width:45px;
-        height:45px;
-        line-height:45px;
+        font-size: 14px;
+        height: 45px;
+        line-height: 45px;
+        right: 30px;
+        width: 45px;
       }
 
       .icon-field {
-        position:absolute;
-        font-size:20px;
-        right:0;
-        text-align:center;
-        display:inline-block;
-        width:45px;
-        height:45px;
-        line-height:45px;
+        display: inline-block;
+        font-size: 20px;
+        height: 45px;
+        line-height: 45px;
+        position: absolute;
+        right: 0;
+        text-align: center;
+        width: 45px;
       }
     }
   }
 
-  select.form-control:not([size]):not([multiple]) {
-    height:auto;
+  select {
+    &.form-control {
+      &:not([size]) {
+        &:not([multiple]) {
+          height: auto;
+        }
+      }
+    }
   }
 
   label {
-    font-weight:700;
-    margin-bottom:2px;
+    font-weight: 700;
+    margin-bottom: 2px;
   }
 
-  h4.modal-title {
-    font-family:Lato, sans-serif;
-    font-size:1.75em;
-    text-align:center;
-  }
+  h4 {
+    &.modal-title {
+      font-family: Lato, sans-serif;
+      font-size: 1.75em;
+      text-align: center;
 
-  h4.modal-title strong {
-    font-weight:900;
+      strong {
+        font-weight: 900;
+      }
+    }
   }
 
   .text-muted {
-    margin-top:15px;
-    margin-bottom:0;
+    margin-bottom: 0;
+    margin-top: 15px;
   }
 
-  a[href='#clear'] {
-    top:40px;
-    right:70px;
-    z-index:4;
+  [href='#clear'] {
+    right: 70px;
+    top: 40px;
+    z-index: 4;
   }
 }
