--- a/frontend/styles/pages/battery.scss
+++ b/frontend/styles/pages/battery.scss
@@ -1,126 +1,133 @@
+@import '../variables';
+
 .pg-battery {
-  font-family:'Open Sans', sans-serif;
-  font-weight:300;
-  background-color:#ECEFF1;
-  color:#2f2f2f;
-  
+  background-color: $color-light5;
+  color: $color-dark1;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+
   .container {
-    max-width:990px;
-    text-align:center;
-    width:95%;
-    padding:0;
+    max-width: 990px;
+    padding: 0;
+    text-align: center;
+    width: 95%;
   }
 
   h1 {
-    font-size:36px;
-    font-family:Oswald, sans-serif;
-    padding:0 20px;
+    font-family: Oswald, sans-serif;
+    font-size: 36px;
+    padding: 0 20px;
 
     .accent {
-      color:#5cb85c;
-      white-space:nowrap;
+      color: $color-green;
+      white-space: nowrap;
     }
 
     strong {
-      font-style:italic;
+      font-style: italic;
     }
   }
 
   .info {
-    border:1px solid #78909C;
-    margin-bottom:20px;
-    padding:40px;
+    border: 1px solid $color-dark2;
+    margin-bottom: 20px;
+    padding: 40px;
 
     .navbar {
-      margin:0 20px;
+      margin: 0 20px;
     }
 
     .nav {
-      background-color:#f2f8ec;
-      border:1px solid rgba(47,47,47,0.16863);
-      border-radius:5px;
-      margin-bottom:30px;
-      padding:0;
+      background-color: $color-light6;
+      border: 1px solid $color-black-dot16863;
+      border-radius: 5px;
+      margin-bottom: 30px;
+      padding: 0;
 
-      li a {
-        color:#cedac0;
-        font-family:Oswald, sans-serif;
-        display:block;
-        font-size:18px;
-        line-height:42px;
-        text-transform:uppercase;
-        text-decoration:none;
+      li {
+        a {
+          color: $color-light7;
+          display: block;
+          font-family: Oswald, sans-serif;
+          font-size: 18px;
+          line-height: 42px;
+          text-decoration: none;
+          text-transform: uppercase;
 
-        &.active, &:hover {
-          background-color:#bddaa2;
-          color:#58763c;
+          &.active,
+          &:hover {
+            background-color: $color-green1;
+            color: $color-green2;
+          }
         }
       }
     }
   }
-  
+
   .upsell {
-    max-width:430px;
-    margin:25px auto 0;
+    margin: 25px auto 0;
+    max-width: 430px;
 
     .card {
-      border:3px solid #212121;
-      box-shadow:0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.1);
-      margin-bottom:25px;
-      padding:20px;
-    }
+      border: 3px solid $color-black1;
+      box-shadow: 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot1;
+      margin-bottom: 25px;
+      padding: 20px;
 
-    .card h4 {
-      font-family:Arial, sans-serif;
+      h4 {
+        font-family: Arial, sans-serif;
+      }
     }
 
     a {
-      display:block;
-      text-decoration:none;
+      display: block;
+      text-decoration: none;
     }
 
     .btn {
-      white-space:normal;
-      font-size:17px;
-      box-shadow:inset 0 32px 59px -18px rgba(255,255,255,0.49), inset 1px 1px 4px rgba(255,255,255,0.54);
-      color:#FFF;
-      border-radius:5px;
-      margin-bottom:20px;
-      transition:box-shadow .15s;
-      border-color:#5cb85c;
-      padding:12px 24px;
-    }
+      border-color: $color-green;
+      border-radius: 5px;
+      box-shadow: inset 0 32px 59px -18px $color-white-dot49, inset 1px 1px 4px $color-white-dot54;
+      color: $color-white;
+      font-size: 17px;
+      margin-bottom: 20px;
+      padding: 12px 24px;
+      transition: box-shadow .15s;
+      white-space: normal;
 
-    .btn:hover {
-      box-shadow:inset 0 32px 59px -18px rgba(255,255,255,0.59), inset 1px 1px 4px rgba(255,255,255,0.55), 0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.1);
-      outline:none;
-    }
+      &:hover {
+        box-shadow: inset 0 32px 59px -18px $color-white-dot59, inset 1px 1px 4px $color-white-dot55, 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot1;
+        outline: none;
+      }
 
-    .btn:active:hover {
-      box-shadow:inset 0 20px 65px -23px rgba(0,0,0,0.62), inset 1px 1px 4px #3aae00;
-      outline:none;
-      border-color:#309200;
+      &:active {
+        &:hover {
+          border-color: $color-green3;
+          box-shadow: inset 0 20px 65px -23px $color-black-dot62, inset 1px 1px 4px $color-green4;
+          outline: none;
+        }
+      }
     }
   }
 
   .warranty-yes {
-    background:#3aae00;
+    background: $color-green4;
   }
 
   .warranty-no {
-    background:#035a03;
+    background: $color-green5;
   }
 
   .warranty-ignore {
-    margin-top:164px;
-    font-size:15px;
-    font-weight:400;
-    line-height:18px;
-    color:#00e;
-    padding:8px 16px;
-  }
+    color: $color-blue4;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18px;
+    margin-top: 164px;
+    padding: 8px 16px;
 
-  .warranty-ignore:hover {
-    color:#00e;
+    &:hover {
+      color: $color-blue4;
+    }
   }
 }
