--- a/frontend/styles/pages/tm3.scss
+++ b/frontend/styles/pages/tm3.scss
@@ -1,185 +1,203 @@
+@import '../variables';
+
 .pg-tm3 {
-  overflow-x:hidden;
-  font-family:'Open Sans', sans-serif;
-  font-weight:400;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  overflow-x: hidden;
 
   .container {
-    padding-left:25px;
-    padding-right:25px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   a {
-    color:#337ab7;
+    color: $color-blue5;
 
     &.h-link {
-      display:inline-block;
-      color:#488ace;
-      font-weight:400;
-      font-size:16px;
-      background:#FF0;
-      padding:8px 14px;
-    }
+      background: $color-yellow;
+      color: $color-blue6;
+      display: inline-block;
+      font-size: 16px;
+      font-weight: 400;
+      padding: 8px 14px;
 
-    &.h-link:hover {
-      color:orange;
+      &:hover {
+        color: $color-orange1;
+      }
     }
   }
 
   hr {
-    margin-top:20px;
-    margin-bottom:20px;
-    border:0;
-    border-top:1px solid #eee;
+    border: 0;
+    border-top: 1px solid $color-light4;
+    margin-bottom: 20px;
+    margin-top: 20px;
   }
 
   h1 {
-    color:gray;
-    font-size:40px;
+    color: $color-dark;
+    font-size: 40px;
   }
 
   h2 {
-    margin-top:10px;
-    text-align:center;
-    color:gray;
-    font-size:32px;
+    color: $color-dark;
+    font-size: 32px;
+    margin-top: 10px;
+    text-align: center;
   }
 
   p {
-    color:gray;
-    font-size:18px;
-    line-height:28px;
-    margin-top:10px;
-    margin-bottom:18px;
+    color: $color-dark;
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 18px;
+    margin-top: 10px;
   }
 
   .header {
-    box-shadow:0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.1);
-    padding:20px 0;
+    box-shadow: 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot1;
+    padding: 20px 0;
 
     .adv-top {
-      display:block;
-      text-align:center;
-      color:gray;
-      font-size:18px;
-      font-weight:300;
-      line-height:30px;
-      letter-spacing:1px;
+      color: $color-dark;
+      display: block;
+      font-size: 18px;
+      font-weight: 300;
+      letter-spacing: 1px;
+      line-height: 30px;
+      text-align: center;
     }
   }
 
   .article {
-    margin-top:27px;
+    margin-top: 27px;
 
     .title {
-      color:#424242;
-      font-size:40px;
-      margin-bottom:15px;
+      color: $color-text;
+      font-size: 40px;
+      margin-bottom: 15px;
     }
 
     .img-block {
-      padding-right:20px;
-      z-index:5;
+      padding-right: 20px;
+      z-index: 5;
 
-      p a {
-        display:inline;
+      p {
+        a {
+          display: inline;
+        }
       }
 
       img {
-        box-shadow:0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot1;
       }
     }
 
     .top-article {
-      padding-left:15px;
-      padding-right:15px;
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
 
-  .img-list a {
-    display:block;
-    margin-bottom:20px;
+  .img-list {
+    a {
+      display: block;
+      margin-bottom: 20px;
+
+      img {
+        box-shadow: 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot2;
+        margin: 0 auto;
+        transition: .25s;
+
+        &:hover {
+          box-shadow: 0 8px 17px 0 $color-black-dot2, 0 6px 20px 0 $color-black-dot29;
+        }
+      }
+    }
+  }
+
+  .img-video-link {
+    .video-content {
+      margin: auto;
+      max-width: 650px;
+      position: relative;
+    }
+
+    &:hover {
+      img {
+        &:first-child {
+          position: relative;
+          z-index: -1;
+        }
+
+        &:last-child {
+          width: auto;
+          z-index: 1;
+        }
+      }
+    }
 
     img {
-      box-shadow:0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.2);
-      transition:.25s;
-      margin:0 auto;
+      &:last-child {
+        position: absolute;
+        top: 0;
+        z-index: -1;
+      }
     }
   }
 
- .img-video-link {
-    .video-content {
-      position:relative;
-      max-width:650px;
-      margin:auto;
-    }
+  .btn-holder {
+    .btn-red {
+      background-color: $color-red30;
+      border-radius: 2px;
+      box-shadow: 0 2px 10px $color-black-dot16, 0 2px 15px $color-black-dot2;
+      color: $color-white;
+      display: inline-block;
+      font-family: Oswald, sans-serif;
+      font-size: 24px;
+      letter-spacing: 1px;
+      margin: 0 auto;
+      transition: .25s;
 
-    &:hover img:first-child {
-      position:relative;
-      z-index:-1;
+      &:hover {
+        box-shadow: 0 8px 17px 0 $color-black-dot2, 0 6px 20px 0 $color-black-dot29;
+      }
     }
-
-    &:hover img:last-child {
-      width:auto;
-      z-index:1;
-    }
-
-    img:last-child {
-      position:absolute;
-      top:0;
-      z-index:-1;
-    }
- }
-
-  .btn-holder .btn-red {
-    display:inline-block;
-    background-color:#c70e02;
-    color:#FFF;
-    box-shadow:0 2px 10px rgba(0,0,0,0.16), 0 2px 15px rgba(0,0,0,0.2);
-    transition:.25s;
-    font-family:Oswald, sans-serif;
-    font-size:24px;
-    border-radius:2px;
-    letter-spacing:1px;
-    margin:0 auto;
   }
 
   .footer {
-    color:#fff;
-    text-align:left;
-    margin:30px auto 0;
+    color: $color-white;
+    margin: 30px auto 0;
+    text-align: left;
 
     .footer-desc {
-      background:#424242;
-      padding:35px 0;
+      background: $color-text;
+      padding: 35px 0;
     }
 
     .footer-links {
-      text-align:center;
-      margin:0 auto 20px;
+      margin: 0 auto 20px;
+      text-align: center;
 
       .list-inline {
-        margin-top:15px;
-        margin-left:-5px;
-      
+        margin-left: -5px;
+        margin-top: 15px;
+
         a {
-          font-size:14px;
+          font-size: 14px;
         }
 
         > li {
-          display:inline-block;
-          padding-left:5px;
-          padding-right:5px;
+          display: inline-block;
+          padding-left: 5px;
+          padding-right: 5px;
         }
       }
     }
 
     p {
-      color:#bdbdbd;
-      margin:0;
+      color: $color-light-gray;
+      margin: 0;
     }
-  }
-
-  .img-list a img:hover, .btn-holder .btn-red:hover {
-    box-shadow:0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.29);
   }
 }
