--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -34,7 +34,7 @@ body > div {
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
-#js-div-loading-bar {
+.js-div-loading-bar {
     position:fixed;
     top:0;
     left:0;
@@ -45,7 +45,7 @@ body > div {
     animation:spin 4s linear infinite;
 }
 
-#js-div-loading-bar .sk-circle {
+.js-div-loading-bar .sk-circle {
     left:calc(50% - 30px);
     top:calc(50% - 30px);
     width:60px;
@@ -53,7 +53,7 @@ body > div {
     position:absolute;
 }
 
-#js-div-loading-bar .sk-circle .sk-child {
+.js-div-loading-bar .sk-circle .sk-child {
     width:100%;
     height:100%;
     position:absolute;
@@ -61,7 +61,7 @@ body > div {
     top:0;
 }
 
-#js-div-loading-bar .sk-circle .sk-child:before {
+.js-div-loading-bar .sk-circle .sk-child:before {
     content:'';
     display:block;
     width:15%;
@@ -73,136 +73,140 @@ body > div {
     margin:0 auto;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle1 {
+.js-div-loading-bar .sk-circle .sk-circle1 {
     -webkit-transform:rotate(0deg);
     -ms-transform:rotate(0deg);
     transform:rotate(0deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle1:before {
+.js-div-loading-bar .sk-circle .sk-circle1:before {
     -webkit-animation-delay:1.2s;
     animation-delay:1.2s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle2 {
+.js-div-loading-bar .sk-circle .sk-circle2 {
     -webkit-transform:rotate(30deg);
     -ms-transform:rotate(30deg);
     transform:rotate(30deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle2:before {
+.js-div-loading-bar .sk-circle .sk-circle2:before {
     -webkit-animation-delay:1.1s;
     animation-delay:1.1s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle3 {
+.js-div-loading-bar .sk-circle .sk-circle3 {
     -webkit-transform:rotate(60deg);
     -ms-transform:rotate(60deg);
     transform:rotate(60deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle3:before {
+.js-div-loading-bar .sk-circle .sk-circle3:before {
     -webkit-animation-delay:1s;
     animation-delay:1s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle4 {
+.js-div-loading-bar .sk-circle .sk-circle4 {
     -webkit-transform:rotate(90deg);
     -ms-transform:rotate(90deg);
     transform:rotate(90deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle4:before {
+.js-div-loading-bar .sk-circle .sk-circle4:before {
     -webkit-animation-delay:.9s;
     animation-delay:.9s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle5 {
+.js-div-loading-bar .sk-circle .sk-circle5 {
     -webkit-transform:rotate(120deg);
     -ms-transform:rotate(120deg);
     transform:rotate(120deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle5:before {
+.js-div-loading-bar .sk-circle .sk-circle5:before {
     -webkit-animation-delay:.8s;
     animation-delay:.8s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle6 {
+.js-div-loading-bar .sk-circle .sk-circle6 {
     -webkit-transform:rotate(150deg);
     -ms-transform:rotate(150deg);
     transform:rotate(150deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle6:before {
+.js-div-loading-bar .sk-circle .sk-circle6:before {
     -webkit-animation-delay:.7s;
     animation-delay:.7s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle7 {
+.js-div-loading-bar .sk-circle .sk-circle7 {
     -webkit-transform:rotate(180deg);
     -ms-transform:rotate(180deg);
     transform:rotate(180deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle7:before {
+.js-div-loading-bar .sk-circle .sk-circle7:before {
     -webkit-animation-delay:.6s;
     animation-delay:.6s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle8 {
+.js-div-loading-bar .sk-circle .sk-circle8 {
     -webkit-transform:rotate(210deg);
     -ms-transform:rotate(210deg);
     transform:rotate(210deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle8:before {
+.js-div-loading-bar .sk-circle .sk-circle8:before {
     -webkit-animation-delay:.5s;
     animation-delay:.5s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle9 {
+.js-div-loading-bar .sk-circle .sk-circle9 {
     -webkit-transform:rotate(240deg);
     -ms-transform:rotate(240deg);
     transform:rotate(240deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle9:before {
+.js-div-loading-bar .sk-circle .sk-circle9:before {
     -webkit-animation-delay:.4s;
     animation-delay:.4s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle10 {
+.js-div-loading-bar .sk-circle .sk-circle10 {
     -webkit-transform:rotate(270deg);
     -ms-transform:rotate(270deg);
     transform:rotate(270deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle10:before {
+.js-div-loading-bar .sk-circle .sk-circle10:before {
     -webkit-animation-delay:.3s;
     animation-delay:.3s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle11 {
+.js-div-loading-bar .sk-circle .sk-circle11 {
     -webkit-transform:rotate(300deg);
     -ms-transform:rotate(300deg);
     transform:rotate(300deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle11:before {
+.js-div-loading-bar .sk-circle .sk-circle11:before {
     -webkit-animation-delay:.2s;
     animation-delay:.2s;
 }
 
-#js-div-loading-bar .sk-circle .sk-circle12 {
+.js-div-loading-bar .sk-circle .sk-circle12 {
     -webkit-transform:rotate(330deg);
     -ms-transform:rotate(330deg);
     transform:rotate(330deg);
 }
 
-#js-div-loading-bar .sk-circle .sk-circle12:before {
+.js-div-loading-bar .sk-circle .sk-circle12:before {
     -webkit-animation-delay:0.1s;
     animation-delay:0.1s;
+}
+
+.message-hidden {
+    display: none;
 }
 
 html:hover [class^="ss-"] {
@@ -741,12 +745,12 @@ img.resp {
     background-color:#540202;
     box-shadow:0 0 2px #c80000;
 }
-input#creditcard{
+input.creditcard{
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
 }
-input#creditcard::-webkit-inner-spin-button,
-input#creditcard::-webkit-outer-spin-button {
+input.creditcard::-webkit-inner-spin-button,
+input.creditcard::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -763,15 +767,15 @@ input#creditcard::-webkit-outer-spin-button {
     padding:50px 15px;
 }
 
-#form-address .fv-control-feedback {
+.form-address .fv-control-feedback {
     right:0;
 }
 
-#form-address .state-col .fv-control-feedback {
+.form-address .state-col .fv-control-feedback {
     right:20px;
 }
 
-#form-address a[href="#clear"] {
+.form-address a[href="#clear"] {
     right:40px;
 }
 
@@ -1012,7 +1016,7 @@ input#creditcard::-webkit-outer-spin-button {
     right:14px;
 }
 
-.pg-checkout .payment #month,.pg-checkout .payment #year {
+.pg-checkout .payment .month,.pg-checkout .payment .year {
     display:inline-block;
     font-size:12px;
     height:25px;
@@ -1126,12 +1130,12 @@ input#creditcard::-webkit-outer-spin-button {
     font-size:14px;
 }
 
-.pg-checkout #state ~ .fv-control-feedback {
+.pg-checkout .state ~ .fv-control-feedback {
     right:25px;
     width:20px;
 }
 
-.pg-checkout #year ~ .fv-control-feedback,.pg-checkout #month ~ .fv-control-feedback {
+.pg-checkout .year ~ .fv-control-feedback,.pg-checkout .month ~ .fv-control-feedback {
     top:0;
     height:25px;
     line-height:28px;
@@ -1148,11 +1152,11 @@ input#creditcard::-webkit-outer-spin-button {
     padding:50px 15px;
 }
 
-.pg-checkout.mobile-mode #step-1 .step-content .radio-box:nth-child(1),.pg-checkout.mobile-mode #step-1 .step-content .radio-box:nth-child(2),.pg-checkout.mobile-mode #step-1 .step-content .radio-box:nth-child(3) {
+.pg-checkout.mobile-mode .step-1 .step-content .radio-box:nth-child(1),.pg-checkout.mobile-mode .step-1 .step-content .radio-box:nth-child(2),.pg-checkout.mobile-mode .step-1 .step-content .radio-box:nth-child(3) {
     display:block;
 }
 
-.pg-checkout.mobile-mode #step-4 h2 {
+.pg-checkout.mobile-mode .step-4 h2 {
     margin-top:0;
 }
 
@@ -1333,7 +1337,7 @@ input#creditcard::-webkit-outer-spin-button {
     color:#DB2927;
 }
 
-.pg-receipt .info .accentBox {
+.pg-receipt .info .accent-box {
     background:#DB2927;
     color:#fff;
     font-family:EurostileLTStd;
@@ -1345,7 +1349,7 @@ input#creditcard::-webkit-outer-spin-button {
     padding:10px 35px 5px;
 }
 
-.pg-receipt .info .orderId {
+.pg-receipt .info .order-id {
     margin-bottom:40px;
 }
 
@@ -1572,11 +1576,11 @@ input#creditcard::-webkit-outer-spin-button {
     color:#f0ad4e;
 }
 
-.hidden-xs-up,.custom-modal .modal-content .has-warning #email ~ [data-fv-validator="emailAddress"] {
+.hidden-xs-up,.custom-modal .modal-content .has-warning .email ~ [data-fv-validator="emailAddress"] {
     display:none;
 }
 
-.custom-modal .address-2,.pg-index .feature .feature-bar,.pg-index .feature .feature-item:nth-child(5):after,.pg-checkout .light-info .info-middle br,.pg-checkout .step .step-content .label-mobile,.pg-checkout .img-shipping,.pg-checkout .radio-box input[type="radio"],.pg-checkout.mobile-mode #step-2,.pg-checkout.mobile-mode #step-3,.pg-checkout.mobile-mode #step-1 .step-content .radio-box {
+.custom-modal .address-2,.pg-index .feature .feature-bar,.pg-index .feature .feature-item:nth-child(5):after,.pg-checkout .light-info .info-middle br,.pg-checkout .step .step-content .label-mobile,.pg-checkout .img-shipping,.pg-checkout .radio-box input[type="radio"],.pg-checkout.mobile-mode .step-2,.pg-checkout.mobile-mode .step-3,.pg-checkout.mobile-mode .step-1 .step-content .radio-box {
     display:none;
 }
 
@@ -1666,12 +1670,12 @@ input#creditcard::-webkit-outer-spin-button {
 
 
 /* Wistia */
-.wistia_responsive_padding_alt {
+.wistia-responsive-padding-salt {
     padding: 56.25% 0 0 0;
     position: relative;
 }
 
-.wistia_responsive_wrapper_alt {
+.wistia-responsive-wrapper-alt {
     height: 100%;
     left: 0;
     position: absolute;
@@ -1679,7 +1683,7 @@ input#creditcard::-webkit-outer-spin-button {
     width: 100%;
 }
 
-.wistia_embed_alt {
+.wistia-embed-alt {
     height: 100%;
     width: 100%
 }
@@ -1820,7 +1824,7 @@ input::-webkit-contacts-auto-fill-button {
         width:calc(100% - 150px);
     }
 
-    .custom-modal .form-control#state {
+    .custom-modal .form-control.state {
         width:calc(100% - 100px);
     }
 
@@ -2208,17 +2212,3 @@ input::-webkit-contacts-auto-fill-button {
         font-size:18px;
     }
 }
-.error-message {
-    color: red;
-    display: block;
-}
-.error-message::first-letter {
-    text-transform: uppercase;
-}
-#ccIdentity {
-    display: block;
-}
-.message-hidden {
-    display: none;
-}
-
