--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -425,9 +425,11 @@ input {
     visibility: hidden;
   }
 }
+
 .message-hidden {
   display: none;
 }
-.ccIdentity {
-    display: block;
+
+.cc-identity {
+  display: block;
 }
