--- a/frontend/styles/variables.scss
+++ b/frontend/styles/variables.scss
@@ -98,3 +98,5 @@ $color-blue6: #488ace;
 $color-black1: #212121;
 $color-black2: #616161;
 $color-black3: #666;
+$color-cream: #feffe2;
+$color-border: #eceeef;
