Checkout CSS Fix

--- a/frontend/styles/pages/checkout.scss
+++ b/frontend/styles/pages/checkout.scss
@@ -114,7 +114,11 @@
       width: 100%;
     }
   }
-
+  .step-1 {
+    .radio-box {
+      display: block;
+    }
+  }
   .radio-box {
     margin: 15px 0;
 
