Fix: The EOT format must be the first declared in @font-face

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -1,13 +1,15 @@
+// sass-lint:disable no-duplicate-properties
 @font-face {
   font-family: 'SS BlackTie-Solid';
   font-style: normal;
   font-weight: normal;
-  src: url('../fonts/ss-black-tie/ss-black-tie-bold.eot'),
-  url('../fonts/ss-black-tie/ss-black-tie-bold.eot?#iefix') format('embedded-opentype'),
+  src: url('../fonts/ss-black-tie/ss-black-tie-bold.eot');
+  src: url('../fonts/ss-black-tie/ss-black-tie-bold.eot?#iefix') format('embedded-opentype'),
   url('../fonts/ss-black-tie/ss-black-tie-solid.woff') format('woff'),
   url('../fonts/ss-black-tie/ss-black-tie-bold.ttf') format('truetype'),
   url('../fonts/ss-black-tie/ss-black-tie-bold.svg#BlackTie-Solid') format('svg');
 }
+// sass-lint:enable no-duplicate-properties
 
 @import './variables';
 
