--- a/frontend/styles/pages/index.scss
+++ b/frontend/styles/pages/index.scss
@@ -2,7 +2,7 @@
 
 .pg-index {
   background-color: $color-black;
-  background-image: url('../images/bg-index.jpg');
+  background-image: url('/tacticalsales/assets/images/bg-index.jpg');
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -195,7 +195,7 @@
       }
 
       .img-holder {
-        background-image: url('../images/icon-btn-call.png');
+        background-image: url('/tacticalsales/assets/images/icon-btn-call.png');
         background-position: center;
         background-repeat: no-repeat;
         bottom: 0;
