--- a/frontend/styles/pages/receipt.scss
+++ b/frontend/styles/pages/receipt.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .pg-receipt {
-  background-image: url('../images/bg-receipt.jpg');
+  background-image: url('/tacticalsales/assets/images/bg-receipt.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   color: $color-text1;
