Fix: fonts path

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -3,11 +3,11 @@
   font-family: 'SS BlackTie-Solid';
   font-style: normal;
   font-weight: normal;
-  src: url('../fonts/ss-black-tie/ss-black-tie-bold.eot');
-  src: url('../fonts/ss-black-tie/ss-black-tie-bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/ss-black-tie/ss-black-tie-solid.woff') format('woff'),
-  url('../fonts/ss-black-tie/ss-black-tie-bold.ttf') format('truetype'),
-  url('../fonts/ss-black-tie/ss-black-tie-bold.svg#BlackTie-Solid') format('svg');
+  src: url('tacticalsales/fonts/ss-black-tie/ss-black-tie-bold.eot');
+  src: url('tacticalsales/fonts/ss-black-tie/ss-black-tie-bold.eot?#iefix') format('embedded-opentype'),
+  url('tacticalsales/fonts/ss-black-tie/ss-black-tie-solid.woff') format('woff'),
+  url('tacticalsales/fonts/ss-black-tie/ss-black-tie-bold.ttf') format('truetype'),
+  url('tacticalsales/fonts/ss-black-tie/ss-black-tie-bold.svg#BlackTie-Solid') format('svg');
 }
 // sass-lint:enable no-duplicate-properties
 
